--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ before_install:
  - echo "graphwalker.org,62.75.191.213 ssh-rsa AAAAB3NzaC1yc2EAAAABIwAAAIEAtt0gW2tGz1f60qs4mSteVq+AhWAw7xYak3+UegaWSwxVh9MpqG/JDRF5CpzTiUvyXlhlAYZ6kCVT5G4zXNNC7ty9UuA5D2PicGOWsF73KGLu6GbmRQTrTMf5ji/IkrFoJysNaXPIbqkwX0TB3DoTyXfE/HoP2JSGwVi5tztUaOc=" > ~/.ssh/known_hosts
 
 script:
- - sshpass -p $GW_PASSWORD rsync -rvz ./ $GW_USER@graphwalker.org:/var/www
+ - sshpass -p $GW_PASSWORD rsync -rvz --exclude '.git/' ./ $GW_USER@graphwalker.org:/var/www
