Updated the workflow with the new TestBuilder

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,10 @@ work/
 amps-standalone/
 */dependency-reduced-pom.xml
 
+# Temporary files #
+###################
+*.kate-swp
+
 # Mac stuff #
 #############
 .DS_Store
